# python-app-CC50-Havard

./: .dockerignore  .gitignore  DespesasPessoaisDB.db  Dockerfile  Dockerfile copy  README copy.md  README.md  app copy.py  app.py  docker-compose copy.yml  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements copy.txt  requirements.txt  sonar-project.properties  test_app.py
.github/workflows/: build_and_test_code_in_sonar_cloud.yml  build_and_test_python-app.yml  build_test_publish.yml  testing_git_comands.yml
db/: create_database.sql
db copy/dataset/: V10__Insert_data_in_Receitas.sql  V11_insert_data_in_Lancamentos  V7__Insert_data_in_TipoCategoria.sql
db copy/migrations/: V2__Create_Table_Usuario.sql  V4__Create_Table_Despesa.sql  V5__Create_Table_Receita.sql  V6__Create_Table_Lancamento.sql
db/.sql/: log.sql
db/cmd_sql/: log copy.sql  log.receitas copy.sql
db/dataset/: V12_insert_data_mock_despesas.sql  V13_insert_data_mock_receitas.sql  (+2 more)
documents/: Deploy de aplicação no Heroku.txt  docker-heroku.txt  heroku-docker.txt  locale.txt
documents copy/: Deploy de aplicação no Heroku.txt  docker-heroku.txt  locale.txt
static/: styles.css
static copy/: styles.css
templates/: categoriaList.html  categorias.html  dashboard.html  despesas.html  despesasList.html  lancamentos.html  layout.html  login.html  receitas.html  receitasList.html
templates copy/: categoriaList.html  categorias.html  dashboard.html  despesasList.html  layout.html  receitas.html  receitasList.html  register.html
test/: test_app.py
(+12 files in other folders)
