[tool.poetry]
name = "despesas-python"
version = "0.1.0"
description = ""
authors = ["Ribeiro <42475620+alexfariakof@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "despesas_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
